[gd_scene load_steps=6 format=3 uid="uid://5avicnv0vxfv"]

[ext_resource type="Script" path="res://scripts/minigames/tug_of_war.gd" id="1_v1t23"]
[ext_resource type="PackedScene" uid="uid://djhljvpaw3vbk" path="res://scenes/ui/tug_of_war_ui.tscn" id="2_wbk5a"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ncng5"]
sky_top_color = Color(0.379371, 0.557964, 0.868519, 1)
sky_horizon_color = Color(0.644843, 0.681741, 0.75038, 1)
ground_horizon_color = Color(0.644843, 0.681741, 0.75038, 1)

[sub_resource type="Sky" id="Sky_sdpit"]
sky_material = SubResource("ProceduralSkyMaterial_ncng5")

[sub_resource type="Environment" id="Environment_e3tsk"]
background_mode = 2
sky = SubResource("Sky_sdpit")
ssao_enabled = true
sdfgi_enabled = true

[node name="TugOfWar" type="Node3D" node_paths=PackedStringArray("stat_check_timer")]
script = ExtResource("1_v1t23")
stat_check_timer = NodePath("StatCheck")
tug_of_war_ui = ExtResource("2_wbk5a")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_e3tsk")

[node name="TugOfWarMap" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.10516, 0.113342, -1.02351)
use_collision = true
size = Vector3(30.7627, 1.22668, 12.4461)

[node name="CSGBox3D" type="CSGBox3D" parent="TugOfWarMap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.13953, 0.33799, -0.0179191)
operation = 2
size = Vector3(2.21802, 1, 13.2749)

[node name="PlaceholderLeft" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.964, 0.75, -3.688)

[node name="Label3D" type="Label3D" parent="PlaceholderLeft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
billboard = 1

[node name="PlaceholderRight" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.788, 0.75, -3.688)

[node name="Label3D" type="Label3D" parent="PlaceholderRight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
billboard = 1

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.978256, 0.2074, 0, -0.2074, 0.978256, 0, 2.87087, 2.28594)

[node name="StatCheck" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -3)
billboard = 1

[connection signal="timeout" from="StatCheck" to="." method="_on_stat_check_timeout"]
